Fixed TagTiles not showing background image
- Fixed TagTiles not showing a background image
- Made styling selectors more accurate

--- a/less/forum/TagHeroImage.less
+++ b/less/forum/TagHeroImage.less
@@ -6,17 +6,17 @@
  text-shadow: rgba(0, 0, 0, 0.45) 1px 1px 1px;
 }
 
-.TagTile a, .TagsLabel a, .Hero h2 {
+.TagTile a, .TagsLabel a, .TagHero--background h2, .DiscussionHero--background h2 {
  color: #fff !important;
 }
 
-.Hero {
+.TagHero--background, .DiscussionHero--background {
  background-size: cover;
  background-position: 50% 50%;
  background-blend-mode: luminosity;
  text-shadow: rgba(0, 0, 0, 0.45) 1px 1px 1px;
 }
 
-.Hero h2 {
+.TagHero--background h2, .DiscussionHero--background h2 {
  text-shadow: rgba(0, 0, 0, 0.45) 2px 1px 1px;
 }
